gen/HTMLParser.py
# Generated from HTMLParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class HTMLParser ( Parser ):

    grammarFileName = "HTMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<'", "<INVALID>", "'>'", 
                     "'?>'", "'/>'", "'/'", "'='" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "CDATA", "DTD", "XML_DeclOpen", 
                      "SCRIPTLET", "SP_TEXT", "SEA_WS", "SCRIPT_OPEN", "STYLE_OPEN", 
                      "OPEN", "TEXT", "CLOSE", "SPECIAL_CLOSE", "SLASH_CLOSE", 
                      "SLASH", "TAG_EQUALS", "SName", "Name", "S", "SCRIPT_BODY", 
                      "SCRIPT_SHORT_BODY", "STYLE_BODY", "STYLE_SHORT_BODY", 
                      "ATTVALUE_VALUE", "ATTRIBUTE" ]

    RULE_document = 0
    RULE_xml = 1
    RULE_content = 2
    RULE_content_body = 3
    RULE_element = 4
    RULE_attribute = 5
    RULE_chardata = 6
    RULE_misc = 7
    RULE_scriptlet = 8
    RULE_script = 9
    RULE_style = 10
    RULE_xml_decl_open = 11

    ruleNames =  [ "document", "xml", "content", "content_body", "element", 
                   "attribute", "chardata", "misc", "scriptlet", "script", 
                   "style", "xml_decl_open" ]

    EOF = Token.EOF
    COMMENT=1
    CDATA=2
    DTD=3
    XML_DeclOpen=4
    SCRIPTLET=5
    SP_TEXT=6
    SEA_WS=7
    SCRIPT_OPEN=8
    STYLE_OPEN=9
    OPEN=10
    TEXT=11
    CLOSE=12
    SPECIAL_CLOSE=13
    SLASH_CLOSE=14
    SLASH=15
    TAG_EQUALS=16
    SName=17
    Name=18
    S=19
    SCRIPT_BODY=20
    SCRIPT_SHORT_BODY=21
    STYLE_BODY=22
    STYLE_SHORT_BODY=23
    ATTVALUE_VALUE=24
    ATTRIBUTE=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def misc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.MiscContext)
            else:
                return self.getTypedRuleContext(HTMLParser.MiscContext,i)


        def xml(self):
            return self.getTypedRuleContext(HTMLParser.XmlContext,0)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.ElementContext)
            else:
                return self.getTypedRuleContext(HTMLParser.ElementContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_document

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = HTMLParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 24
                    self.misc() 
                self.state = 29
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HTMLParser.XML_DeclOpen:
                self.state = 30
                self.xml()


            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 36
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HTMLParser.COMMENT) | (1 << HTMLParser.SCRIPTLET) | (1 << HTMLParser.SEA_WS))) != 0):
                        self.state = 33
                        self.misc()
                        self.state = 38
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 39
                    self.element() 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HTMLParser.COMMENT) | (1 << HTMLParser.SCRIPTLET) | (1 << HTMLParser.SEA_WS))) != 0):
                self.state = 45
                self.misc()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class XmlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def xml_decl_open(self):
            return self.getTypedRuleContext(HTMLParser.Xml_decl_openContext,0)


        def SPECIAL_CLOSE(self):
            return self.getToken(HTMLParser.SPECIAL_CLOSE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(HTMLParser.AttributeContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_xml

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXml" ):
                return visitor.visitXml(self)
            else:
                return visitor.visitChildren(self)




    def xml(self):

        localctx = HTMLParser.XmlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_xml)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.xml_decl_open()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HTMLParser.Name:
                self.state = 52
                self.attribute()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(HTMLParser.SPECIAL_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.Content_bodyContext)
            else:
                return self.getTypedRuleContext(HTMLParser.Content_bodyContext,i)


        def getRuleIndex(self):
            return HTMLParser.RULE_content

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent" ):
                return visitor.visitContent(self)
            else:
                return visitor.visitChildren(self)




    def content(self):

        localctx = HTMLParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 60
                    self.content_body() 
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Content_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self):
            return self.getTypedRuleContext(HTMLParser.ElementContext,0)


        def CDATA(self):
            return self.getToken(HTMLParser.CDATA, 0)

        def COMMENT(self):
            return self.getToken(HTMLParser.COMMENT, 0)

        def chardata(self):
            return self.getTypedRuleContext(HTMLParser.ChardataContext,0)


        def getRuleIndex(self):
            return HTMLParser.RULE_content_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent_body" ):
                return visitor.visitContent_body(self)
            else:
                return visitor.visitChildren(self)




    def content_body(self):

        localctx = HTMLParser.Content_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_content_body)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HTMLParser.SCRIPT_OPEN, HTMLParser.STYLE_OPEN, HTMLParser.OPEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.element()
                pass
            elif token in [HTMLParser.CDATA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(HTMLParser.CDATA)
                pass
            elif token in [HTMLParser.COMMENT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.match(HTMLParser.COMMENT)
                pass
            elif token in [HTMLParser.SP_TEXT, HTMLParser.SEA_WS, HTMLParser.TEXT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.chardata()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HTMLParser.RULE_element

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Script_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def script(self):
            return self.getTypedRuleContext(HTMLParser.ScriptContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript_tag" ):
                return visitor.visitScript_tag(self)
            else:
                return visitor.visitChildren(self)


    class Single_slash_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Name(self):
            return self.getToken(HTMLParser.Name, 0)
        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(HTMLParser.AttributeContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_slash_tag" ):
                return visitor.visitSingle_slash_tag(self)
            else:
                return visitor.visitChildren(self)


    class Style_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def style(self):
            return self.getTypedRuleContext(HTMLParser.StyleContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyle_tag" ):
                return visitor.visitStyle_tag(self)
            else:
                return visitor.visitChildren(self)


    class Single_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SName(self):
            return self.getToken(HTMLParser.SName, 0)
        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(HTMLParser.AttributeContext,i)

        def Name(self):
            return self.getToken(HTMLParser.Name, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_tag" ):
                return visitor.visitSingle_tag(self)
            else:
                return visitor.visitChildren(self)


    class Paired_tagContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HTMLParser.ElementContext
            super().__init__(parser)
            self.o_tag = None # Token
            self.c_tag = None # Token
            self.copyFrom(ctx)

        def content(self):
            return self.getTypedRuleContext(HTMLParser.ContentContext,0)

        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(HTMLParser.Name)
            else:
                return self.getToken(HTMLParser.Name, i)
        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HTMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(HTMLParser.AttributeContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPaired_tag" ):
                return visitor.visitPaired_tag(self)
            else:
                return visitor.visitChildren(self)



    def element(self):

        localctx = HTMLParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = HTMLParser.Paired_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(HTMLParser.OPEN)
                self.state = 73
                localctx.o_tag = self.match(HTMLParser.Name)
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 74
                        self.attribute() 
                    self.state = 79
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HTMLParser.Name:
                    self.state = 80
                    self.match(HTMLParser.Name)


                self.state = 83
                self.match(HTMLParser.CLOSE)
                self.state = 84
                self.content()
                self.state = 85
                self.match(HTMLParser.OPEN)
                self.state = 86
                self.match(HTMLParser.SLASH)
                self.state = 87
                localctx.c_tag = self.match(HTMLParser.Name)
                self.state = 88
                self.match(HTMLParser.CLOSE)
                pass

            elif la_ == 2:
                localctx = HTMLParser.Single_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(HTMLParser.OPEN)
                self.state = 91
                self.match(HTMLParser.SName)
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 92
                        self.attribute() 
                    self.state = 97
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HTMLParser.Name:
                    self.state = 98
                    self.match(HTMLParser.Name)


                self.state = 101
                _la = self._input.LA(1)
                if not(_la==HTMLParser.CLOSE or _la==HTMLParser.SLASH_CLOSE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                localctx = HTMLParser.Single_slash_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.match(HTMLParser.OPEN)
                self.state = 103
                self.match(HTMLParser.Name)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HTMLParser.Name:
                    self.state = 104
                    self.attribute()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 110
                self.match(HTMLParser.SLASH_CLOSE)
                pass

            elif la_ == 4:
                localctx = HTMLParser.Script_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.script()
                pass

            elif la_ == 5:
                localctx = HTMLParser.Style_tagContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.style()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAG_EQUALS(self):
            return self.getToken(HTMLParser.TAG_EQUALS, 0)

        def ATTVALUE_VALUE(self):
            return self.getToken(HTMLParser.ATTVALUE_VALUE, 0)

        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(HTMLParser.Name)
            else:
                return self.getToken(HTMLParser.Name, i)

        def getRuleIndex(self):
            return HTMLParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = HTMLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.match(HTMLParser.Name)
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==HTMLParser.Name):
                    break

            self.state = 120
            self.match(HTMLParser.TAG_EQUALS)
            self.state = 121
            self.match(HTMLParser.ATTVALUE_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChardataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(HTMLParser.TEXT, 0)

        def SP_TEXT(self):
            return self.getToken(HTMLParser.SP_TEXT, 0)

        def SEA_WS(self):
            return self.getToken(HTMLParser.SEA_WS, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_chardata

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChardata" ):
                return visitor.visitChardata(self)
            else:
                return visitor.visitChildren(self)




    def chardata(self):

        localctx = HTMLParser.ChardataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_chardata)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HTMLParser.SP_TEXT) | (1 << HTMLParser.SEA_WS) | (1 << HTMLParser.TEXT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MiscContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(HTMLParser.COMMENT, 0)

        def SEA_WS(self):
            return self.getToken(HTMLParser.SEA_WS, 0)

        def scriptlet(self):
            return self.getTypedRuleContext(HTMLParser.ScriptletContext,0)


        def getRuleIndex(self):
            return HTMLParser.RULE_misc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMisc" ):
                return visitor.visitMisc(self)
            else:
                return visitor.visitChildren(self)




    def misc(self):

        localctx = HTMLParser.MiscContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_misc)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HTMLParser.COMMENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(HTMLParser.COMMENT)
                pass
            elif token in [HTMLParser.SEA_WS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(HTMLParser.SEA_WS)
                pass
            elif token in [HTMLParser.SCRIPTLET]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.scriptlet()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScriptletContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCRIPTLET(self):
            return self.getToken(HTMLParser.SCRIPTLET, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_scriptlet

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScriptlet" ):
                return visitor.visitScriptlet(self)
            else:
                return visitor.visitChildren(self)




    def scriptlet(self):

        localctx = HTMLParser.ScriptletContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_scriptlet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(HTMLParser.SCRIPTLET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCRIPT_OPEN(self):
            return self.getToken(HTMLParser.SCRIPT_OPEN, 0)

        def SCRIPT_BODY(self):
            return self.getToken(HTMLParser.SCRIPT_BODY, 0)

        def SCRIPT_SHORT_BODY(self):
            return self.getToken(HTMLParser.SCRIPT_SHORT_BODY, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_script

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = HTMLParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(HTMLParser.SCRIPT_OPEN)
            self.state = 133
            _la = self._input.LA(1)
            if not(_la==HTMLParser.SCRIPT_BODY or _la==HTMLParser.SCRIPT_SHORT_BODY):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StyleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STYLE_OPEN(self):
            return self.getToken(HTMLParser.STYLE_OPEN, 0)

        def STYLE_BODY(self):
            return self.getToken(HTMLParser.STYLE_BODY, 0)

        def STYLE_SHORT_BODY(self):
            return self.getToken(HTMLParser.STYLE_SHORT_BODY, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_style

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyle" ):
                return visitor.visitStyle(self)
            else:
                return visitor.visitChildren(self)




    def style(self):

        localctx = HTMLParser.StyleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_style)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(HTMLParser.STYLE_OPEN)
            self.state = 136
            _la = self._input.LA(1)
            if not(_la==HTMLParser.STYLE_BODY or _la==HTMLParser.STYLE_SHORT_BODY):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Xml_decl_openContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def XML_DeclOpen(self):
            return self.getToken(HTMLParser.XML_DeclOpen, 0)

        def getRuleIndex(self):
            return HTMLParser.RULE_xml_decl_open

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXml_decl_open" ):
                return visitor.visitXml_decl_open(self)
            else:
                return visitor.visitChildren(self)




    def xml_decl_open(self):

        localctx = HTMLParser.Xml_decl_openContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_xml_decl_open)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(HTMLParser.XML_DeclOpen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





